// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`specification rules compiled specs fails when /openapi endpoint isn't specified 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#referenced-entities",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "component names",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#tags",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "open api version names",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#making-the-openapi-specification-available",
    "error": "Expected route /openapi/{version} to be included",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "get open api versions",
    "passed": false,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#making-the-openapi-specification-available",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "list open api version",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
]
`;

exports[`specification rules compiled specs fails when /openapi/{versions} endpoint isn't specified 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#referenced-entities",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "component names",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#tags",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "open api version names",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#making-the-openapi-specification-available",
    "error": "Expected route /openapi/{version} to be included",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "get open api versions",
    "passed": false,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#making-the-openapi-specification-available",
    "error": "Expected route /openapi to be included",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "list open api version",
    "passed": false,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
]
`;

exports[`specification rules fails when components are not PascalCase 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
        "x-snyk-api-stability": "wip",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#referenced-entities",
    "error": "Expected thingResourceResponse to be pascal case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "component names",
    "passed": false,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
        "x-snyk-api-stability": "wip",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#tags",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "open api version names",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
]
`;

exports[`specification rules uncompiled specs passes when /openapi endpoint isn't specified 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
        "x-snyk-api-stability": "wip",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#referenced-entities",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "component names",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
        "x-snyk-api-stability": "wip",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#tags",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "open api version names",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
]
`;

exports[`specification rules uncompiled specs passes when /openapi/{versions} endpoint isn't specified 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
        "x-snyk-api-stability": "wip",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#referenced-entities",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "component names",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
        "x-snyk-api-stability": "wip",
      },
    },
    "condition": undefined,
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/standards/rest.md#tags",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "open api version names",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "specification",
  },
]
`;
